name:                dsmc
version:             0.1.0.0
synopsis:            DSMC library for rarefied gas dynamics
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
category:            Physics

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.4.1

library
  ghc-options: -Wall -O2 -funbox-strict-fields -Odph -rtsopts -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3
  hs-source-dirs: src

  exposed-modules:
    DSMC,
    DSMC.Cells,
    DSMC.Domain,
    DSMC.Surface,
    DSMC.Traceables,
    DSMC.Types,
    DSMC.Macroscopic,
    DSMC.Particles,
    DSMC.Util.Constants,
    DSMC.Util.Vector

  other-modules:
    DSMC.Util

  build-depends:
    attoparsec  == 0.10.*,
    base        == 4.*,
    bytestring  == 0.9.*,
    mwc-random  >= 0.12.0.1,
    parallel    == 3.2.*,
    primitive   == 0.4.*,
    repa        == 3.2.*,
    strict      == 0.3.*,
    vector      == 0.9.*
